# bazel-port

./: .bazelrc  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md
bazel_port/: BUILD.bazel  __init__.py  cmake.bzl  oci_layout_runner.py  oci_runner.py  oci_runner_test.py
docs/: STATUS.md  container-toolchain.md  decisions.md  dependency-policy.md  handoff.md  porting-workflow.md  remote-execution.md
ports/llama_cpp/: BUILD.bazel  README.md  cmake_build.py
toolchains/container/: BUILD.bazel  cmake-image.apko.lock.json  cmake-image.apko.yaml  cmake_image_test.py  run_cmake_image_bwrap_test.py  run_cmake_image_test.py
