load("@rules_python//python:defs.bzl", "py_binary", "py_test")

py_binary(
    name = "oci_runner",
    srcs = [
        "//bazel_port:__init__.py",
        "//bazel_port:oci_runner.py",
    ],
    main = "//bazel_port:oci_runner.py",
)

py_binary(
    name = "oci_layout_runner",
    srcs = [
        "//bazel_port:__init__.py",
        "//bazel_port:oci_layout_runner.py",
    ],
    main = "//bazel_port:oci_layout_runner.py",
    visibility = ["//visibility:public"],
)

py_test(
    name = "oci_runner_test",
    srcs = [
        "//bazel_port:__init__.py",
        "//bazel_port:oci_runner.py",
        "//bazel_port:oci_runner_test.py",
    ],
)
